--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -34,7 +34,7 @@
     border-radius: 4px;
     letter-spacing: 0.06em;
 
-    @media screen and (min-width:767px) and (max-width: 1199px){
+    @media screen and (min-width:767px){
         padding: 10px 28px;
     }
 }
@@ -72,7 +72,7 @@
     border-radius: 4px;
     letter-spacing: 0.06em;
 
-    @media screen and (min-width:768px) and (max-width:1199px){
+    @media screen and (min-width:768px){
         padding: 10px 52px;
     }
     
