--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -44,6 +44,11 @@
         color: var(--accent-color);
     }
 
+    @media screen and (min-width:1200px){
+        width: 170px;
+    }
+    
+
     @media screen and (min-width:768px) and (max-width:1199px){
         width: 226px;
     }
