--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,9 +4,10 @@
 
     @media screen and (min-width:1200px) {
         padding-bottom: 94px;
+        padding-top: 94px;
     }
 
-    @media screen and (min-width:768px) {
+    @media screen and (min-width:768px) and (max-width:1199px){
         padding-top: 60px;
         padding-bottom: 60px;
     }
@@ -18,6 +19,10 @@
 
 .team-item {
     gap: 30px;
+
+    @media screen and (min-width:1200px){
+        display: flex;
+    }
     
     @media screen and (min-width:768px) and (max-width:1199px) {
         display: flex;
