--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,31 +1,53 @@
 .hero__main {
     text-align: center;
 }
-
 .hero {
     max-width: 1600px;
-
     margin: 0 auto;
-
     background-color: #C4C4C4;
-    background-size: cover;
-    background-position: center;
     background-repeat: no-repeat;
-    padding: 200px 0 200px 0;
-
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-mob-@1x.jpg);
-
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    
+    padding-top: 118px;
+    padding-bottom: 118px;
+    
+    max-width: 480px;
+    max-height: 400px;
+    
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../images/hero/header-img-mob-@1x.jpg);
+    
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-mob-@2x.jpg);
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url(../images/hero/header-img-mob-@2x.jpg);
     }
-
-    @media screen and (min-width:480px) and (max-width:767px){
-        max-height: 400px;
+    
+    @media screen and (min-width: 768px) {
+        max-width: 768px;
+        
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-tab-@1x.jpg);
+        
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-tab-@2x.jpg);
+        }
     }
-}
-
+    @media screen and (min-width: 1200px) {
+        max-width: 1600px;
+        max-height: 600px;
+    
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url(../images/hero/img@1x.jpg);
+    
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url(../images/hero/img@2x.jpg);
+        }
+    } 
+}  
 .hero__title {
     top: 50%;
     bottom: 50%;
@@ -54,6 +76,3 @@
 
     }
 }
-
-
-
