--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -7,13 +7,9 @@
         padding-top: 94px;
     }
 
-    @media screen and (min-width:768px) and (max-width:1199px){
+    @media screen and (min-width:480px) and (max-width:1199px){
         padding-top: 60px;
         padding-bottom: 60px;
-    }
-    @media screen and (min-width:480px) and (max-width:767px) {
-        padding-top: 60px;
-        padding-bottom: 26px;
     }
 }
 
@@ -41,6 +37,9 @@
     @media screen and (min-width:480px) and (max-width:767px){
         margin-bottom: 30px;
     }
+}
+.team-box:last-child {
+    margin-bottom: 0;
 }
 
 .team-name {
