--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,8 @@ link:focus {
 @media screen and (min-width: 480px) and (max-width: 1199px) {
   .section-title {
     margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.1785714286;
   }
 }
 
@@ -269,6 +271,14 @@ img {
 }
 
 /*contacts*/
+.list-item {
+  margin-bottom: 10px;
+}
+
+.list-item:last-child {
+  margin-bottom: 0px;
+}
+
 .contacts__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -295,7 +305,6 @@ img {
   .contacts__link {
     font-size: 12px;
     line-height: 1.1666666667;
-    margin-bottom: 10px;
   }
 }
 
@@ -319,22 +328,48 @@ img {
   max-width: 1600px;
   margin: 0 auto;
   background-color: #C4C4C4;
-  background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
-  padding: 200px 0 200px 0;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/header-img-mob-@1x.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-mob-@1x.jpg);
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  max-width: 480px;
+  max-height: 400px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/header-img-mob-@1x.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-mob-@1x.jpg);
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/header-img-mob-@2x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-mob-@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/header-img-mob-@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-mob-@2x.jpg);
   }
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .hero {
-    max-height: 400px;
+    max-width: 768px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/header-img-tab-@1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-tab-@1x.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/header-img-tab-@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/header-img-tab-@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    max-height: 600px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/img@1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/img@1x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/img@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/img@2x.jpg);
   }
 }
 
@@ -658,16 +693,10 @@ img {
     padding-top: 94px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .team {
     padding-top: 60px;
     padding-bottom: 60px;
-  }
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .team {
-    padding-top: 60px;
-    padding-bottom: 26px;
   }
 }
 
@@ -708,6 +737,10 @@ img {
   .team-box {
     margin-bottom: 30px;
   }
+}
+
+.team-box:last-child {
+  margin-bottom: 0;
 }
 
 .team-name {
@@ -1034,6 +1067,12 @@ img {
   }
 }
 
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .container-footer {
+    margin-bottom: 60px;
+  }
+}
+
 .social-list-footer {
   margin-bottom: 30px;
   display: -webkit-box;
@@ -1046,11 +1085,6 @@ img {
       -ms-flex-align: center;
           align-items: center;
   gap: 10px;
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .social-list-footer {
-    margin-bottom: 60px;
-  }
 }
 
 .social-link-footer {
@@ -1103,7 +1137,7 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding-top: 60px;
+    margin-top: 60px;
   }
 }
 
@@ -1172,8 +1206,12 @@ img {
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-right: 12px;
   padding: 15px 16px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-input-subscription {
+    margin-right: 12px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-input-subscription {
