--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -24,5 +24,7 @@ link:focus {
 
     @media screen and (min-width:480px) and (max-width:1199px){
         margin-bottom: 30px;
+        font-size: 28px;
+        line-height: calc(33/28);
     }
 }
