--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,4 +1,10 @@
 /*contacts*/
+.list-item{
+    margin-bottom: 10px;
+}
+.list-item:last-child{
+    margin-bottom: 0px;
+}
 .contacts__link {
     display: flex;
     font-weight: 500;
@@ -20,7 +26,6 @@
     @media screen and (min-width:768px) and (max-width:1199px){
         font-size: 12px;
         line-height: calc(14/12);
-        margin-bottom: 10px;
 
     }
 }
