--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -131,16 +131,17 @@
         text-align: center;
     }
 }
+.container-footer{
+    @media screen and (min-width:480px) and (max-width:767px) {
+      margin-bottom: 60px;
+    }
+}
 .social-list-footer{
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
-
-    @media screen and (min-width:480px) and (max-width:767px) {
-        margin-bottom: 60px;
-    }
 }
 .social-link-footer {
     display: flex;
@@ -177,7 +178,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-top: 60px;
+        margin-top: 60px;
     }
 }
 .footer-form {
@@ -216,8 +217,11 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    margin-right: 12px;
     padding: 15px 16px;
+
+    @media screen and (min-width:1200px){
+        margin-right: 12px;
+    }
 
     @media screen and (min-width:768px) and (max-width:1199px){
         margin-bottom: 20px;
